2013-01-31  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: add flags in url_decode.
	* Torrent.cc: pass URL_DECODE_PLUS flag to decode '+' into space.

2013-01-29  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc: (_url_decode) fixed decoding plus sign.
	* Timer.cc, Timer.h: (StopDelayed) new method.
	* Torrent.cc: don't call AnnounceDHT in StartTrackers, do it
	  only by timer; stop dht_announce_timer at the start; use Roll
	  method to set log context; decode magnet URL values properly.
	* DHT.cc: refresh routes after loading the node cache; load the
	  cache quickly using Roll; add some debug log messages.

2013-01-25  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: don't run at-exit-fg when backgrounded.
	* xstring.cc: (append(const char*,size_t)) fixed a bug;
	  (_url_decode) decode plus to space.

2013-01-24  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, Torrent.cc, attach.h, bookmark.cc, history.cc,
	  lftp.cc, lftp_rl.c, misc.cc, misc.h:
	  (get_lftp_{config,data,cache}_dir) new functions; use them.
	* xdg-move: new script.
	* CmdExec.cc, CmdExec.h, lftp.cc: (cmd:at-exit-fg) new setting.

2012-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, commands.cc, lftp.cc: make cmd:interactive tri-bool.

2012-12-13  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: don't show status line unless interactive.

2012-12-04  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: remove obsolete assert.

2012-12-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed coredump after trying to start a duplicate torrent.

2012-11-14  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fixed status message.
	* buffer.cc, buffer.h: limit maximum buffer size.
	* ftpclass.cc: use buffer size limit; don't Resume on several methods;
	  fixed CWD for certain paths; fixed try count resetting on uploading.

2012-09-27  Alexander V. Lukyanov <lav@yars.free.net>
